big fix, better performance (i guess)